Cardapio Buguer Garage

--- a/index.html
+++ b/index.html
@@ -4,15 +4,56 @@
   <meta charset="UTF-8">
   <title>Burger Garage</title>
   <link rel="stylesheet" href="./styles.css">
-   <link rel="icon" type="image/png" href="./Assets/Logo Burger Garege quadrada.png" />
+   <link rel="icon" type="image/png" href="./Assets/1858002.png" />
 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dela+Gothic+One&family=Oswald:wght@400;600&family=Pacifico&family=Sedgwick+Ave+Display&family=Skranji&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dela+Gothic+One&family=Oswald:wght@400;600&family=Sedgwick+Ave+Display&family=Skranji&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dela+Gothic+One&family=Lobster&family=Oswald:wght@400;600&family=Pacifico&family=Sedgwick+Ave+Display&family=Skranji&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
+      <img class="transparente" src="./assets/trasparente.png" alt="Logo Garage Buguer" height="1" width="1">
+     </header>
+     
+     <div class="category">
+        <div class="categoria">
+        <h2>Indicação da Garage</h2>
+        </div>
+        <div class="combo-container">
+            <aside class="item combo">
+                <div class="combo-details">
+                    <h2>Shelby Crispy + Fritas 150g + Guaraná Antarctica 269 ml</h2>
+                    <div class="description">
+                        <p>Campeão de vendas com receita Original do Chef.
+                            Carne angus de 170g preparada na brasa, coberto com queijo mozarela derretido, cebola crispy bem crocante, com molho barbecue rustico no nosso pão brioche selado na manteiga. Acompanha bebida e fritas.</p>
+                        <img src="./Assets/Shelby Crispy.png" alt="Combo Clássico">
+                    </div>
+                    <div class="price">
+                        <p class="price-value">R$ 36,90</p>
+                    </div>
+                </div>
+            </aside>
 
-        <img class="transparente" src="./assets/trasparente.png" alt="Logo Infinity Maker" height="1" width="1">
-       
-    </header>
+            <aside class="item combo">
+                <div class="combo-details">
+                    <h2>Shelby Crispy + Fritas 150g + Guaraná Antarctica 269 ml</h2>
+                    <div class="description">
+                        <p>Campeão de vendas com receita Original do Chef.
+                            Carne angus de 170g preparada na brasa, coberto com queijo mozarela derretido, cebola crispy bem crocante, com molho barbecue rustico no nosso pão brioche selado na manteiga. Acompanha bebida e fritas.</p>
+                        <img src="./Assets/Shelby Crispy.png" alt="Combo Clássico">
+                    </div>
+                    <div class="price">
+                        <p class="price-value">R$ 25,00</p>
+                    </div>
+                </div>
+            </aside>
+
+            <!-- Adicione outros combos conforme necessário -->
+        </div>
+    </div>
 
 </body>
