--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Courgette&family=Permanent+Marker&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dela+Gothic+One&family=Oswald:wght@400;600&family=Sedgwick+Ave+Display&family=Skranji&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dela+Gothic+One&family=Lobster&family=Oswald:wght@400;600&family=Pacifico&family=Sedgwick+Ave+Display&family=Skranji&display=swap" rel="stylesheet">
 </head>
@@ -19,41 +19,148 @@
       <img class="transparente" src="./assets/trasparente.png" alt="Logo Garage Buguer" height="1" width="1">
      </header>
      
-     <div class="category">
-        <div class="categoria">
-        <h2>Indicação da Garage</h2>
-        </div>
-        <div class="combo-container">
+     <div class="container">
+
+        <div class="category">
+         <div class="categoria">
+            <h2>Indicação da Garage</h2>
+           </div>
+            <div class="combo-container">
+                <aside class="item combo">
+                    <div class="combo-details">
+                        <h2>Shelby Crispy + Fritas 150g + Guaraná Antarctica 269 ml</h2>
+                     <div class="description">
+                         <p>Campeão de vendas com receita Original do Chef.
+                             Carne angus de 170g preparada na brasa, coberto com queijo mozarela derretido, cebola crispy bem crocante, com molho barbecue rustico no nosso pão brioche selado na manteiga. Acompanha bebida e fritas.</p>
+                         <img src="./Assets/Fotos Hambueger/Shelby Crispy.png" alt="Combo Clássico">
+                     </div>
+                     <div class="price">
+                         <p class="price-value">R$ 36,90</p>
+                     </div>
+                </div>
+            </aside>
+
             <aside class="item combo">
                 <div class="combo-details">
-                    <h2>Shelby Crispy + Fritas 150g + Guaraná Antarctica 269 ml</h2>
+                    <h2>Fat Bob + Fritas 150 g + Coca cola Original 310 ml</h2>
                     <div class="description">
-                        <p>Campeão de vendas com receita Original do Chef.
-                            Carne angus de 170g preparada na brasa, coberto com queijo mozarela derretido, cebola crispy bem crocante, com molho barbecue rustico no nosso pão brioche selado na manteiga. Acompanha bebida e fritas.</p>
-                        <img src="./Assets/Shelby Crispy.png" alt="Combo Clássico">
+                        <p>O lendário Cheddar & Bacon é um mito pelo seu sabor inigualável! Com carne Angus de 170g coberto com queijo cheddar, duas fatias de bacon crocante, e maionese defumada no nosso pão brioche. Acompanha fritas e bebida.</p>
+                        <img src="./Assets/Fotos Hambueger/Fat Bob.jpg" alt="Combo Clássico">
                     </div>
                     <div class="price">
-                        <p class="price-value">R$ 36,90</p>
+                        <p class="price-value">R$ 38,00</p>
                     </div>
                 </div>
             </aside>
 
             <aside class="item combo">
                 <div class="combo-details">
-                    <h2>Shelby Crispy + Fritas 150g + Guaraná Antarctica 269 ml</h2>
+                    <h2>Fat Bob + Fritas 150 g + Coca cola Original 310 ml</h2>
                     <div class="description">
-                        <p>Campeão de vendas com receita Original do Chef.
-                            Carne angus de 170g preparada na brasa, coberto com queijo mozarela derretido, cebola crispy bem crocante, com molho barbecue rustico no nosso pão brioche selado na manteiga. Acompanha bebida e fritas.</p>
-                        <img src="./Assets/Shelby Crispy.png" alt="Combo Clássico">
+                        <p>O lendário Cheddar & Bacon é um mito pelo seu sabor inigualável! Com carne Angus de 170g coberto com queijo cheddar, duas fatias de bacon crocante, e maionese defumada no nosso pão brioche. Acompanha fritas e bebida.</p>
+                        <img src="./Assets/Fotos Hambueger/Fat Bob.jpg" alt="Combo Clássico">
                     </div>
                     <div class="price">
-                        <p class="price-value">R$ 25,00</p>
+                        <p class="price-value">R$ 39,00</p>
                     </div>
                 </div>
             </aside>
 
             <!-- Adicione outros combos conforme necessário -->
         </div>
+    </div>
+
+
+    <div class="container">
+
+        <div class="category">
+         <div class="categoria">
+            <h2>Burgers</h2>
+           </div>
+            <div class="combo-container">
+                <aside class="item combo">
+                    <div class="combo-details">
+                        <h2>IRON CHEESEBURGER</h2>
+                     <div class="description">
+                         <p>Um clássico muito bem executado! Com nossa carne angus de 170g coberto com queijo prato derretido, maionese defumada no nosso pão brioche selado na manteiga.</p>
+                         <img src="./Assets/Fotos Hambueger/IRON CHEESEBURGER.jpg" alt="Combo Clássico">
+                     </div>
+                     <div class="price">
+                         <p class="price-value">R$ 24,00</p>
+                     </div>
+                </div>
+            </aside>
+
+            <aside class="item combo">
+                <div class="combo-details">
+                    <h2>CHEDDAR GARAGE</h2>
+                    <div class="description">
+                        <p>Maravilhoso Cheddar Garage com blend suculento de 170g, cebola caramelizada, muito cheddar cremoso tudo isso bem ajustado em um delicioso pão australiano.</p>
+                        <img src="./Assets/Fotos Hambueger/CHEDDAR GARAGE.jpg" alt="Combo Clássico">
+                    </div>
+                    <div class="price">
+                        <p class="price-value">R$ 30,00</p>
+                    </div>
+                </div>
+            </aside>
+
+            <aside class="item combo">
+                <div class="combo-details">
+                    <h2>ASTON DUPLO</h2>
+                    <div class="description">
+                        <p>Um Otimmo Pão australiano com 340g de carne blend, um maravilhoso queijo cheddar, bacon bem crocante, maionese de alho, alface e tomate.</p>
+                        <img src="./Assets/Fotos Hambueger/CHEDDAR GARAGE.jpg" alt="Combo Clássico">
+                    </div>
+                    <div class="price">
+                        <p class="price-value">R$ 45,00</p>
+                    </div>
+                </div>
+            </aside>
+
+            <!-- Adicione outros combos conforme necessário -->
+        </div>
+    </div>
+
+    <div class="container">
+
+        <div class="category">
+         <div class="categoria">
+            <h2>Porções</h2>
+           </div>
+            <div class="combo-container">
+                <aside class="item combo">
+                    <div class="combo-details">
+                        <h2>FRITAS C/ CHEDDAR E BACON</h2>
+                     <div class="description"> 
+                         <p>Porção deliciosa de batata chedar coberto de bacon. Campeão de vendas com receita Original do Chef.</p>
+                         <img src="./Assets/Fotos Hambueger/FRITAS C CHEDDAR E BACON.jpg" alt="Combo Clássico">
+                     </div>
+                     <div class="price">
+                         <p class="price-value">R$ 32,90</p>
+                     </div>
+                </div>
+            </aside>
+
+            <aside class="item combo">
+                <div class="combo-details">
+                    <h2>ANÉIS DE CEBOLA EMPANADOS</h2>
+                    <div class="description">
+                        <p>Cebolas cortadas em forma de anéis, emapanadas com uma leve camada de farinha de rosca e fritas no óleo bem quente.</p>
+                        <img src="./Assets/Fotos Hambueger/ANÉIS DE CEBOLA EMPANADOS.jpg" alt="Combo Clássico">
+                    </div>
+                    <div class="price">
+                        <p class="price-value">R$ 24,90</p>
+                    </div>
+                </div>
+            </aside>
+
+            <!-- Adicione outros combos conforme necessário -->
+        </div>
+    </div>
+        
+   
+
+
     </div>
 
 </body>
